Add PAC integration, build spec tweaks, Inno Setup script and Windows CI workflow; generate PAC and local tests

--- a/src/config.json
+++ b/src/config.json
@@ -17,5 +17,5 @@
     "vimeo",
     "tumblr"
   ],
-  "external_proxy": "http://your-external-proxy:3128"
+  "external_proxy": "http://127.0.0.1:3128"
 }
