ci: fix PowerShell verify step for Windows runners

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,12 +95,14 @@ jobs:
       - name: Build exe (Windows)
         run: pyinstaller zapret_proxy_simple.spec
       - name: Verify exe exists (Windows)
+        if: runner.os == 'Windows'
         run: |
-          echo "Contents of dist/:" && ls -la dist || true
-          if [ ! -f dist/zapret_proxy.exe ]; then
-            echo "ERROR: dist/zapret_proxy.exe not found" >&2
+          Write-Host "Contents of dist:"; Get-ChildItem -Path dist -Recurse -Force -ErrorAction SilentlyContinue
+          if (-not (Test-Path 'dist\zapret_proxy.exe')) {
+            Write-Error "dist\zapret_proxy.exe not found"
             exit 1
-          fi
+          }
+        shell: powershell
       - name: Build Inno Setup installer
         if: runner.os == 'Windows'
         run: |
