--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -45,9 +45,9 @@ jobs:
 
       - name: Verify exe exists
         run: |
-          Write-Host "Contents of dist/:"; Get-ChildItem -Path dist -Recurse -Force -ErrorAction SilentlyContinue
-          if (-not (Test-Path dist\zapret_proxy.exe)) {
-            Write-Error "dist\zapret_proxy.exe not found"
+          Write-Host "Contents of dist:"; Get-ChildItem -Path dist -Recurse -Force -ErrorAction SilentlyContinue
+          if (-not (Test-Path 'dist\\zapret_proxy.exe')) {
+            Write-Error "dist\\zapret_proxy.exe not found"
             exit 1
           }
         shell: powershell
